[package]
name = "tiktok-re-embed"
version = "0.1.0"
edition = "2021"
authors = ["obscurity <z@x4.pm>"]

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "cache"], default-features = false }
tokio = { version = "1.21", features = ["rt-multi-thread"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.7"

kankyo = "0.3"
paris = { version = "1.5", features = ["timestamps", "macros", "no_logger"] }
anyhow = "1.0.68"

[profile.release]
lto = true
strip = true
codegen-units = 1
