[package]
name = "tiktok-re-embed"
version = "0.1.0"
edition = "2021"
authors = ["obscurity <z@x4.pm>"]

[dependencies]
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }

reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
regex = "1.7.2"

kankyo = "0.3.0"
paris = { version = "1.5.13", features = ["timestamps", "macros", "no_logger"] }
miette = { version = "5.6.0", features = ["fancy"] }

[dependencies.serenity]
version = "0.11.5"
features = ["client", "gateway", "rustls_backend", "model", "cache"]
default-features = false

[profile.release]
lto = true
strip = true
codegen-units = 1
